# lua-decompiler

./: CMakeLists.txt  README.md  disassembly_output.txt  test.lua  test.luac
src/: AST.h  ASTGenerator.cpp  ASTGenerator.h  BytecodeStructs.h  CodeEmitter.cpp  CodeEmitter.h  Decompiler.cpp  Decompiler.h  Disassembler.cpp  Disassembler.h  OpCodes.cpp  OpCodes.h  Parser.cpp  Parser.h  main.cpp
